# federated-compute

./: .bazelrc  CONTRIBUTING  GETTING_STARTED.md  MODULE.bazel  README.md  WORKSPACE  requirements.txt
fcp/: BUILD  WORKSPACE.bazel  config.bzl  extensions.bzl  requirements.in  requirements.txt
fcp/aggregation/: BUILD
fcp/artifact_building/: BUILD  artifact_constants.py  checkpoint_type.py  checkpoint_utils.py  checkpoint_utils_test.py  data_spec.py  data_spec_test.py  data_upload_plan_builder.py  data_upload_plan_builder_test.py  federated_compute_plan_builder.py  graph_helpers.py  graph_helpers_test.py  plan_utils.py  plan_utils_test.py  proto_helpers.py  proto_helpers_test.py  tensor_utils.py  tensor_utils_test.py  test_utils.py  test_utils_test.py  type_checks.py  type_checks_test.py  variable_helpers.py  variable_helpers_test.py
fcp/base/: BUILD  base_name.cc  base_name.h  bounds.h  bounds_test.cc  clock.cc  clock.h  compression.cc  compression.h  compression_test.cc  container.h  digest.cc  digest.h  digest_test.cc  dispatch.h  dispatch_test.cc  error.h  function_registry.h  function_registry_test.cc  future.cc  future.h  future_test.cc  golden_file.bzl  match.h  match_test.cc  meta.h  meta_test.cc  monitoring.cc  monitoring.h  monitoring_test.cc  move_to_lambda.h  move_to_lambda_test.cc  new.h  parallel_generate_sequential_reduce.h  platform.cc  platform.h  platform_test.cc  process_unique_id.cc  process_unique_id.h  process_unique_id_test.cc  (+38 more)
fcp/client/: BUILD  README.md  client_runner.h  client_runner_example_data.proto  client_runner_main.cc  converters.cc  converters.h  converters_test.cc  diag_codes.proto  eligibility_decider.cc  eligibility_decider.h  eligibility_decider_test.cc  event_publisher.h  event_time_range.proto  example_iterator_query_recorder.cc  example_iterator_query_recorder.h  example_iterator_query_recorder_test.cc  example_query_result.proto  fake_event_publisher.h  fake_log_manager.h  fake_server.cc  fake_server.h  federated_protocol.cc  federated_protocol.h  federated_protocol_test.cc  federated_protocol_util.cc  federated_protocol_util.h  federated_protocol_util_test.cc  federated_select.cc  federated_select.h  federated_select_test.cc  federated_task_environment.cc  federated_task_environment.h  federated_task_environment_test.cc  files.h  fl_runner.cc  fl_runner.h  fl_runner.proto  fl_runner_internal.proto  fl_runner_tensorflow_spec_result.proto  (+38 more)
fcp/confidentialcompute/: BUILD  cbor_utils.cc  cbor_utils.h  cbor_utils_test.cc  client_payload.cc  client_payload.h  client_payload_test.cc  compiler.py  compiler_test.py  composing_tee_executor.cc  composing_tee_executor.h  composing_tee_executor_test.cc  constants.h  cose.cc  cose.h  cose_test.cc  crypto.cc  crypto.h  crypto_test.cc  crypto_test_util.cc  crypto_test_util.h  crypto_test_util_test.cc  data_helper.cc  data_helper.h  data_helper_test.cc  lambda_runner.h  mock_lambda_runner.h  nonce.cc  nonce.h  nonce_test.cc  private_state.h  tee_executor.cc  tee_executor.h  tee_executor_test.cc  tee_executor_value.cc  tee_executor_value.h  tee_executor_value_test.cc  test_utils.cc  test_utils.h  tff_execution_helper.cc  (+5 more)
fcp/demo/: BUILD  README.md  __init__.py  aggregations.py  aggregations_test.py  checkpoint_tensor_reference.py  checkpoint_tensor_reference_test.py  eligibility_eval_tasks.py  eligibility_eval_tasks_test.py  federated_computation.py  federated_computation_test.py  federated_context.py  federated_context_test.py  federated_data_source.py  federated_data_source_test.py  federated_program_test.py  http_actions.py  http_actions_test.py  media.py  media_test.py  plan_utils.py  plan_utils_test.py  server.py  server_runner.py  server_test.py  task_assignments.py  task_assignments_test.py  test_utils.py  test_utils_test.py
fcp/dictionary/: BUILD  dictionary.cc  dictionary.h  dictionary.proto  dictionary_test.cc
fcp/jni/: BUILD  jni_util.h
fcp/patches/: BUILD  googleapis_longrunning.patch  googletest.patch  libcbor_configuration.patch  libcppbor.patch  tensorflow_federated_deps.patch  tensorflow_federated_executors.patch  tensorflow_googleapis_java_proto_rules.patch  tensorflow_googleapis_proto_rules.patch  tensorflow_googletest.patch  tensorflow_llvm_url.patch  tensorflow_pybind11_osx.patch  tensorflow_serving.patch  tensorflow_source_utils.patch  tensorflow_tf_custom_op_py_library.patch  (+1 more)
(+758 files in other folders)
